# hamming-bitwise-fast

./: .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  criterion.toml
.github/workflows/: ci.yml
benches/: array_batch_vs_slice_batch.rs  array_vs_slice.rs  batch.rs  batch_inlined_vs_call.rs  batch_input_type.rs  batch_multiversion.rs  batch_vs_loop.rs  batch_vs_single.rs  chunk_strategy.rs  combined.rs  competitors.rs  dispatch.rs  hamming.rs  head_to_head.rs  helpers.rs  implementations.rs  inlining.rs  input_type.rs  l1_cache_effect.rs  memory_allocation.rs  multiversion.rs  multiversion_placement.rs  q1_data_types.rs  q2_arrays_vs_slices.rs  q3_simd_dispatch.rs  q4_batching.rs  q5_vs_competitors.rs  q6_slice_multiversion.rs  q7_batch_slice.rs  q8_inlining.rs  simplify.rs  single_pair.rs  threshold.rs  threshold_strategy.rs  u8_vs_u64.rs  vs_competitors.rs
examples/: asm_check.rs  inspect_asm.rs  lib_asm.rs  slice_batch_asm.rs  threshold_asm.rs
scripts/: bench-x86.sh  bench_compiler_flags.sh  collect_results.sh  run_all_benchmarks.sh
src/: array.rs  lib.rs  naive.rs  slice.rs  tests.rs
