[package]
name = "hamming-bitwise-fast"
autobenches = false
description = "A fast, zero-dependency implementation of bitwise Hamming Distance using a method amenable to auto-vectorization."
version = "1.0.0"
edition = "2021"
authors = ["Evan Schwartz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emschwartz/hamming-bitwise-fast"
documentation = "https://docs.rs/hamming-bitwise-fast"

[lib]
bench = false

[features]
default = []
multiversion_x86 = ["dep:multiversion"]

[dependencies]
multiversion = { version = "0.8", optional = true }

[dev-dependencies]
divan = "0.1"
hamming = "0.1.3"
simsimd = "6.5.12"
triple_accel = "0.4.0"
rand = "0.9.2"

[target.'cfg(target_arch = "x86")'.dev-dependencies]
hamming_rs = "0.2.22"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
hamming_rs = "0.2.22"

[[bench]]
name = "u8_vs_u64"
harness = false

[[bench]]
name = "array_vs_slice"
harness = false

[[bench]]
name = "multiversion"
harness = false

[[bench]]
name = "batch_vs_single"
harness = false

[[bench]]
name = "batch_inlined_vs_call"
harness = false

[[bench]]
name = "batch_multiversion"
harness = false

[[bench]]
name = "vs_competitors"
harness = false

[[bench]]
name = "array_batch_vs_slice_batch"
harness = false
