[package]
name = "hamming-bitwise-fast"
autobenches = false
description = "Fast bitwise Hamming distance using auto-vectorization with runtime SIMD detection on x86."
version = "1.1.0"
edition = "2021"
rust-version = "1.61"
authors = ["Evan Schwartz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emschwartz/hamming-bitwise-fast"
documentation = "https://docs.rs/hamming-bitwise-fast"
keywords = ["hamming", "simd", "distance", "bitwise", "popcount"]
categories = ["algorithms"]
exclude = ["results/", ".DS_Store", "CLAUDE.md", "criterion.toml"]

[profile.bench]
lto = true

[lib]
bench = false

[features]
default = ["multiversion_x86"]
multiversion_x86 = ["dep:multiversion"]

[dependencies]
multiversion = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.8"
test-case = "3"
hamming = "0.1.3"
simsimd = "6.5.12"
triple_accel = "0.4.0"
rand = "0.9.2"

[target.'cfg(target_arch = "x86")'.dev-dependencies]
hamming_rs = "0.2.22"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
hamming_rs = "0.2.22"

[[bench]]
name = "competitors"
harness = false

[[bench]]
name = "batch_input_type"
harness = false

[[bench]]
name = "array_vs_slice"
harness = false

# Additional benchmarks in benches/ are for development only and not declared
# here. To run one, temporarily add a [[bench]] entry with harness = false:
#   [[bench]]
#   name = "chunk_strategy"
#   harness = false

